--- a/app/views/public/souvenirs/index.html.erb
+++ b/app/views/public/souvenirs/index.html.erb
@@ -4,7 +4,7 @@
 			<%= render "layouts/prefecture", prefectures: @prefectures %>
     </div>
 
-    <div class="col-8 offset-1 pt-5">
+    <div class="col-11 col-lg-8 offset-lg-1 pt-5 mx-auto">
     	<div class="mb-3">
         <% if params[:keyword] == 'average_star' %>
           <h2 class="text-center"><i class="fa-solid fa-star fa-xl"></i> 星評価高い順</h2>
