--- a/app/views/public/souvenirs/show.html.erb
+++ b/app/views/public/souvenirs/show.html.erb
@@ -4,7 +4,7 @@
       <%= render "layouts/prefecture", prefectures: @prefectures %>
     </div>
 
-    <div class="col-8 offset-1 pt-5">
+    <div class="col-11 col-lg-8 offset-lg-1 pt-5 mx-auto">
       <h2 class="text-center"><%= @souvenir.souvenir_name %>　の詳細</h2>
       <div class="m-3">
         <div class="d-flex justify-content-center ">
