--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -4,36 +4,35 @@
       <%= render "layouts/prefecture", prefectures: @prefectures %>
     </div>
 
-    <div class="col-8 offset-1 pt-5">
-      <h2 class="m-3">ユーザー情報編集</h2>
+    <div class="col-11 col-lg-8 offset-lg-1 pt-5 mx-auto">
+      <h2 class="m-3 text-center">ユーザー情報編集</h2>
       <div class="text-right">
         <%= link_to "戻る", 'javascript:history.back()', class: "btn btn-outline-secondary" %>
       </div>
       <%= form_with model: @user, url: user_update_path do |f| %>
-      <table class="table m-3">
-        <tbody>
-          <tr>
-            <th class="text-center align-middle">名前&emsp;<span class="badge badge-danger">必須</span></th>
-            <td><%= f.text_field :name, autofocus: true, class: "form-control" %></td>
-          </tr>
-          <tr>
-            <th class="text-center align-middle">表示名（ユーザー名）&emsp;<span class="badge badge-danger">必須</span></th>
-            <td><%= f.text_field :nickname, class: "form-control" %></td>
-          </tr>
-          <tr>
-            <th class="text-center align-middle">在住県名&emsp;<span class="badge badge-danger">必須</span></th>
-            <td><%= f.text_field :residence_prefecture, class: "form-control" %></td>
-          </tr>
-          <tr>
-            <th class="text-center align-middle">メールアドレス&emsp;<span class="badge badge-danger">必須</span></th>
-            <td><%= f.email_field :email, class: "form-control" %></td>
-          </tr>
-          <tr>
-					  <td class="text-center"><%= link_to "退会する", user_confirm_path, class: "btn btn-danger" %></td>
-					  <td class="text-center"><%= f.submit "編集内容を保存する", class: "btn btn-success" %></td>
-				  </tr>
-        </tbody>
-      </table>
+      <div class="mb-3">
+          <span class="badge badge-danger">必須</span>&ensp; <%= f.label :名前 %>
+          <%= f.text_field :name, autofocus: true, placeholder: "群馬太郎", class: "form-control" %>
+        </div>
+        <div class="mb-3">
+          <span class="badge badge-danger">必須</span>&ensp; <%= f.label :表示名（ユーザー名） %>
+          <%= f.text_field :nickname, placeholder: "ぐんまちゃん", class: "form-control" %>
+        </div>
+        <div class="mb-3">
+          <span class="badge badge-danger">必須</span>&ensp; <%= f.label :在住県名 %>
+          <%= f.text_field :residence_prefecture, placeholder: "群馬県", class: "form-control" %>
+        </div>
+        <div class="mb-3">
+          <span class="badge badge-danger">必須</span>&ensp; <%= f.label :メールアドレス %>
+          <%= f.email_field :email, autocomplete: "email", placeholder: "sample@example.com", class: "form-control" %>
+        </div>
+
+        <div class="text-center mt-4 mb-5 px-5">
+          <%= f.submit "編集内容を保存する", class: "btn btn-success px-3" %>
+        </div>
+        <div class="text-right mt-5 mb-3 px-5">
+          <%= link_to "退会する", user_confirm_path, class: "btn btn-danger mt-5" %>
+        </div>
       <% end %>
     </div>
 
