--- a/app/views/public/users/users_reviews.html.erb
+++ b/app/views/public/users/users_reviews.html.erb
@@ -4,16 +4,14 @@
 			<%= render "layouts/prefecture", prefectures: @prefectures %>
     </div>
 
-    <div class="col-8 offset-1 mb-3">
-
-        <% if @user.is_deleted == false %>
-          <h2 class="mt-5"><i class="fa-solid fa-user fa-xl"></i> <%= @user.nickname %> さんが</h2>
-          <h2 class="text-center">投稿したレビュー一覧</h2>
-        <% else @user.is_deleted == true %>
-          <h2 class="mt-5">退会済みユーザー が</h2>
-          <h2 class="text-center">投稿したレビュー一覧</h2>
-        <% end %>
-
+    <div class="col-11 col-lg-8 offset-lg-1 pt-5 mx-auto">
+      <% if @user.is_deleted == false %>
+        <h2 class="mt-5"><i class="fa-solid fa-user fa-xl"></i> <%= @user.nickname %> さんが</h2>
+        <h2 class="text-center">投稿したレビュー一覧</h2>
+      <% else @user.is_deleted == true %>
+        <h2 class="mt-5">退会済みユーザー が</h2>
+        <h2 class="text-center">投稿したレビュー一覧</h2>
+      <% end %>
       <h5 class="text-center my-3 ml-5">在住県 <i class="fa-solid fa-location-dot fa-xl"></i> <%= @user.residence_prefecture %></h5>
       <div class ="m-2 text-right">
         <%= link_to "戻る", 'javascript:history.back()', class: "btn btn-outline-secondary" %>
@@ -24,6 +22,5 @@
        <%= render "public/homes/search_review", reviews: @user.reviews %>
       </div>
     </div>
-
   </div>
 </div>
