--- a/app/views/public/homes/search_category.html.erb
+++ b/app/views/public/homes/search_category.html.erb
@@ -4,8 +4,8 @@
 			<%= render "layouts/prefecture", prefectures: @prefectures %>
     </div>
 
-    <div class="col-8 offset-1 pt-5">
-    	<div class="mb-3">
+    <div class="col-11 col-lg-8 offset-lg-1 pt-5 mx-auto">
+    	<div class="mt-5 mb-3">
     	  <% if params[:name] == "food" %>
     	    <h2 class="text-center">食品　のミヤゲ一覧</h2>
     	  <% else params[:name] == "goods" %>
