--- a/app/views/public/homes/search_column.html.erb
+++ b/app/views/public/homes/search_column.html.erb
@@ -4,8 +4,8 @@
 			<%= render "layouts/prefecture", prefectures: @prefectures %>
     </div>
 
-    <div class="col-8 offset-1 pt-5">
-    	<div class="mb-3">
+    <div class="col-11 col-lg-8 offset-lg-1 pt-5 mx-auto">
+    	<div class="mt-5 mb-3">
         <% if params[:people].present? %>
           <% @review_people.first(1).each do |review| %>
             <h2 class="text-center"><%= review.people_i18n %>　のレビューがついたミヤゲ一覧</h2>
