--- a/app/views/public/homes/search_review_column.html.erb
+++ b/app/views/public/homes/search_review_column.html.erb
@@ -4,7 +4,7 @@
 			<%= render "layouts/prefecture", prefectures: @prefectures %>
     </div>
 
-    <div class="col-8 offset-1 mb-3">
+    <div class="col-11 col-lg-8 offset-lg-1 pt-5 mx-auto">
       <% if params[:people].present? %>
         <% @reviews.first(1).each do |review| %>
           <h2 class="text-center m-4"><%= review.people_i18n %>　が選択されたレビュー一覧</h2>
