--- a/app/assets/stylesheets/public/souvenirs.scss
+++ b/app/assets/stylesheets/public/souvenirs.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the public/souvenirs controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+@media screen and (max-width: 768px) {
+  .fa-pen {
+    font-size: 20px;
+  }
+  .fa-bookmark {
+    font-size: 20px;
+  }
+}
