--- a/app/views/public/homes/search_prefecture.html.erb
+++ b/app/views/public/homes/search_prefecture.html.erb
@@ -4,8 +4,8 @@
 			<%= render "layouts/prefecture", prefectures: @prefectures %>
     </div>
 
-    <div class="col-8 offset-1 pt-5">
-      <div class="mb-3">
+    <div class="col-11 col-lg-8 offset-lg-1 pt-5 mx-auto">
+      <div class="mt-5 mb-3">
         <h2 class="text-center"><%= @prefecture.prefecture_name %>　のミヤゲ一覧</h2>
         <div class ="m-3 text-right">
           <%= link_to "戻る", 'javascript:history.back()', class: "btn btn-outline-secondary mt-3" %>
