--- a/app/views/public/reviews/edit.html.erb
+++ b/app/views/public/reviews/edit.html.erb
@@ -4,7 +4,7 @@
       <%= render "layouts/prefecture", prefectures: @prefectures %>
     </div>
 
-    <div class="col-8 offset-1 pt-5">
+    <div class="col-11 col-lg-8 offset-lg-1 pt-5 mx-auto">
       <h2 class="m-3"><%= @souvenir.souvenir_name %>　のレビュー編集画面</h2>
       <div class="text-right">
         <%= link_to "戻る", 'javascript:history.back()', class: "btn btn-outline-secondary", data: {"turbolinks" => false} %>
@@ -79,14 +79,14 @@
             <tr>
               <th></th>
               <td class="text-center"><%= f.submit "更新する", class: "btn btn-success p-2", data: {"turbolinks" => false} %></td>
-              <td class="text-right">
-                <% if @review.user == current_user %>
-                  <%= link_to "削除", souvenir_review_path, class: "btn btn-outline-danger p-2", method: :delete, "data-confirm" => "このレビューを削除しますか？", data: {"turbolinks" => false} %>
-                <% end %>
-              </td>
             </tr>
           </tbody>
         </table>
+        <div class="text-left">
+          <% if @review.user == current_user %>
+            <%= link_to "削除", souvenir_review_path, class: "btn btn-outline-danger p-2", method: :delete, "data-confirm" => "このレビューを削除しますか？", data: {"turbolinks" => false} %>
+          <% end %>
+        </div>
       <% end %>
     </div>
 
