--- a/app/views/public/souvenirs/new.html.erb
+++ b/app/views/public/souvenirs/new.html.erb
@@ -4,48 +4,50 @@
       <%= render "layouts/prefecture", prefectures: @prefectures %>
     </div>
 
-    <div class="col-8 offset-1 pt-5">
+    <div class="col-11 col-lg-8 offset-lg-1 pt-5 mx-auto">
       <h2 class="text-center">ミヤゲ新規登録</h2>
       <div class="text-right m-3">
         <%= link_to "戻る", 'javascript:history.back()', class: "btn btn-outline-secondary" %>
       </div>
 
       <%= form_with model: @souvenir, url: souvenirs_path do |f| %>
-        <div class="col-12 m-3">
+        <div class="col-12 table-responsive">
           <table class="table table-border">
             <tbody>
               <tr>
-                <td></td>
-                <td>ミヤゲの写真がない場合は、下記より楽天で検索してください。</td>
+                <th class="col-3"></th>
+                <td class="col-5">ミヤゲの写真がない場合は、下記より楽天で検索してください。</td>
               </tr>
               <tr>
-                <td class="col-3 align-middle text-center">楽天で画像検索</td>
-                <td class="text-center"><%= link_to "楽天で画像検索", rakuten_index_path, class: "btn btn-info btn-block" %></td>
+                <th class="col-3 align-middle text-center">楽天で画像検索</th>
+                <td class="col-5 text-center"><%= link_to "楽天で画像検索", rakuten_index_path, class: "btn btn-info" %></td>
               </tr>
               <tr>
-                <td class="col-3 text-center">ミヤゲ名&emsp;<span class="badge badge-danger">必須</span></td>
-                <td><%= f.text_field :souvenir_name, autofocus: true, class: "form-control" %></td>
+                <th class="col-3 text-center">ミヤゲ名&emsp;<span class="badge badge-danger">必須</span></th>
+                <td class="col-5"><%= f.text_field :souvenir_name, autofocus: true, class: "form-control" %></td>
               </tr>
               <tr>
-                <td class="col-3 align-middle text-center">写真</td>
-                <td><%= f.file_field :image, class: "form-control-image", accept: 'image/*' %>
-                    <%= f.label :image, "※ 楽天で画像を取得した際には画像を選択する必要はありません。", class: "mt-3 font-weight-bold" %>
+                <th class="col-3 align-middle text-center">写真</th>
+                <td class="col-5">
+                  <%= f.file_field :image, class: "form-control-image", accept: 'image/*' %><br>
+                  <p class="mt-3 font-weight-bold">※ 楽天で画像を取得した際には画像を選択する必要はありません。</p>
                 </td>
               </tr>
               <tr>
-                <td class="col-3 text-center">県名&emsp;<span class="badge badge-danger">必須</span></td>
-                <td><%= f.collection_select :prefecture_id, Prefecture.all, :id, :prefecture_name, {prompt: "選択してください"}, class: "form-control", :id => "prefecture_id" %></td>
+                <th class="col-3 text-center">県名&emsp;<span class="badge badge-danger">必須</span></th>
+                <td class="col-5"><%= f.collection_select :prefecture_id, Prefecture.all, :id, :prefecture_name, {prompt: "選択してください"}, class: "form-control", :id => "prefecture_id" %></td>
               </tr>
               <tr>
-                <td class="col-3 text-center">紹介文&emsp;<span class="badge badge-danger">必須</span></td>
-                <td><%= f.text_area :introduction, class: "form-control", rows: "4" %></td>
+                <th class="col-3 text-center">紹介文&emsp;<span class="badge badge-danger">必須</span></th>
+                <td class="col-5"><%= f.text_area :introduction, class: "form-control", rows: "4" %></td>
               </tr>
               <tr>
-                <td class="col-3 text-center">カテゴリー&emsp;<span class="badge badge-danger">必須</span></td>
-                <td><%= f.radio_button :category, Souvenir.categories.key(0) %>
-                    <%= f.label :category_food, "食品" %></br>
-                    <%= f.radio_button :category, Souvenir.categories.key(1) %>
-                    <%= f.label :category_goods, "グッズ" %>
+                <th class="col-3 text-center">カテゴリー&emsp;<span class="badge badge-danger">必須</span></th>
+                <td class="col-5">
+                  <%= f.radio_button :category, Souvenir.categories.key(0) %>
+                  <%= f.label :category_food, "食品" %></br>
+                  <%= f.radio_button :category, Souvenir.categories.key(1) %>
+                  <%= f.label :category_goods, "グッズ" %>
                 </td>
               </tr>
             </tbody>
