--- a/app/views/public/users/confirm.html.erb
+++ b/app/views/public/users/confirm.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-8 mx-auto text-center">
+    <div class="col-8 col-sm-10 mx-auto text-center">
       <h2 class="m-5">本当に退会しますか？</h2>
       <h6 class="m-3">退会するとこれまでのレビューやほしい！の情報が消えてしまいます。</h6>
       <h6 class="m-4">それでも退会しますか？</h6>
