[Fix]レイアウト修正

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -4,7 +4,7 @@
       <%= render "layouts/prefecture", prefectures: @prefectures %>
     </div>
 
-    <div class="col-8 offset-1 pt-5">
+    <div class="col-11 col-lg-8 offset-lg-1 pt-5 mx-auto">
       <div class="row card">
         <%= image_tag "top.jpg", :size => "600x400", class: "card-img" %>
         <div class="card-img-overlay d-flex align-center", style="color: white;">
