--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -4,7 +4,7 @@
       <%= render "layouts/prefecture", prefectures: @prefectures %>
     </div>
 
-    <div class="col-8 offset-1 mt-5">
+    <div class="col-11 col-lg-8 offset-lg-1 pt-5 mx-auto">
       <div class="row card">
         <%= image_tag "草津.png", :size => "500x500", class: "card-img" %>
         <div class="card-img-overlay d-flex align-center", style="color: white;">
