--- a/app/views/public/souvenirs/show.html.erb
+++ b/app/views/public/souvenirs/show.html.erb
@@ -34,12 +34,12 @@
             <table class="table table-border">
               <tbody>
                 <tr>
-                  <td class="col-4 text-center align-middle">ミヤゲ名</td>
-                  <td><%= @souvenir.souvenir_name %></td>
+                  <td class="col-4 col-md-5 text-center align-middle">ミヤゲ名</td>
+                  <td class="col-4 col-md-7"><%= @souvenir.souvenir_name %></td>
                 </tr>
                 <tr>
-                  <td class="col-4 text-center align-middle">県名</td>
-                  <td>
+                  <td class="col-4 col-md-5 text-center align-middle">県名</td>
+                  <td class="col-4 col-md-7">
                     <% if @souvenir.prefecture.present? %>
                       <%= @souvenir.prefecture.prefecture_name %>
                     <% else %>
@@ -48,24 +48,24 @@
                   </td>
                 </tr>
                 <tr>
-                  <td class="col-3 text-center align-middle">紹介文</td>
-                  <td><%= safe_join(@souvenir.introduction.split("\n"),tag(:br)) %></td>
+                  <td class="col-4 col-md-5 text-center align-middle">紹介文</td>
+                  <td class="col-4 col-md-7"><%= safe_join(@souvenir.introduction.split("\n"),tag(:br)) %></td>
                         <!--↑ viewに表示する際に、改行を反映させる記述　-->
                 </tr>
                 <tr>
-                  <td class="col-3 text-center align-middle">カテゴリー</td>
-                  <td><%= @souvenir.category_i18n %></td>
+                  <td class="col-4 col-md-5 text-center align-middle">カテゴリー</td>
+                  <td class="col-4 col-md-7"><%= @souvenir.category_i18n %></td>
                 </tr>
                 <tr>
-                  <td class="col-3 text-center align-middle">ほしい！</td>
-                  <td>
+                  <td class="col-4 col-md-5 text-center align-middle">ほしい！</td>
+                  <td class="col-4 col-md-7">
                     <div id="want_btn_count<%= @souvenir.id %>">
                       <%= render "wants_count", souvenir: @souvenir %></div>
                     </div>
                   </td>
                 </tr>
                 <tr>
-                  <td class="col-3 text-center align-middle">タグ</td>
+                  <td class="col-4 col-md-5 text-center align-middle">タグ</td>
                   <td class="d-flex flex-wrap">
                     <% uniq_tags = Array.new %>
                     <% @souvenir.reviews.each do |review| %>
@@ -83,8 +83,8 @@
                   </td>
                 </tr>
                 <tr>
-                  <td class="col-3 text-center align-middle">平均評価</td>
-                  <td><%= render "average_star", souvenir: @souvenir %></td>
+                  <td class="col-4 text-center align-middle">平均評価</td>
+                  <td class="col-4 col-md-7"><%= render "average_star", souvenir: @souvenir %></td>
                 </tr>
               </tbody>
             </table>
