--- a/app/views/public/users/want.html.erb
+++ b/app/views/public/users/want.html.erb
@@ -12,7 +12,7 @@
       <div class="row">
         <% @user.wants.each do |want| %>
           <div class="card-deck col-lg-4 col-sm-4 mx-auto mb-3">
-            <%= link_to souvenir_path(want.souvenir_id) do %>
+            <%= link_to souvenir_path(want.souvenir_id), style: "text-decoration:none;" do %>
               <div class="card h-100 mx-auto border-secondary btn btn-outline-warning", style="width:15rem;">
                 <% if want.souvenir.rakuten_image_url.present? %>
                   <img src="<%= want.souvenir.rakuten_image_url %>">
@@ -20,8 +20,8 @@
                   <%= image_tag want.souvenir.get_image, class: "card-img-top width='30%' height='50'" %>
                 <% end %>
                 <div class="card-body">
-                  <h4 class="card-title"><%= want.souvenir.souvenir_name %></h4>
-                  <p class="card-text"><%= want.souvenir.introduction %></p>
+                  <h4 class="card-title bg-warning text-white border"><%= want.souvenir.souvenir_name %></h4>
+                  <p class="card-text"><%= want.souvenir.introduction.truncate(30) %></p>
                   <p td class="card-subtitle text-center"><%= want.created_at.strftime('%Y年%m月%d日') %></p>
                 </div>
               </div>
