--- a/app/views/public/reviews/edit.html.erb
+++ b/app/views/public/reviews/edit.html.erb
@@ -10,7 +10,7 @@
         <%= link_to "戻る", 'javascript:history.back()', class: "btn btn-outline-secondary", data: {"turbolinks" => false} %>
       </div>
 
-      <%= form_with model: @review, url: souvenir_review_path, method: :patch do |f| %>
+      <%= form_with model: [@souvenir, @review], url: souvenir_review_path, method: :patch do |f| %>
         <table class="table m-3">
           <tbody>
             <tr>
